--- a/promocoes.html
+++ b/promocoes.html
@@ -74,7 +74,7 @@
                       <p>1,5l<br>R$: 14,50</p>
                     </div><!-- /.col-lg-4 -->
                     <div class=" fundo col-lg-2 m-3 text-center border border-danger">
-                      <img src="img/Passatempo.png" alt="Pacote de Bolacha Passatempo" height="150">
+                      <img src="img/passatempo.png" alt="Pacote de Bolacha Passatempo" height="150">
                       <h4>Bolacha PassaTempo</h4>
                       <p>130g<br>R$: 2,61</p>
                     </div>
